static/css/base.css
* {
  box-sizing: border-box;
}

html,
body {
  background-color: var(--color-background);
  font-size: 1em;
  margin: 0;
  padding: 0;
}

body {
  color: var(--color-text);
  font-family: 'Atkinson Hyperlegible', sans-serif;
  font-weight: 400;
  line-height: var(--line-default);
}

li,
p {
  font-size: var(--text-s);
}

a {
  border-bottom: 2px solid var(--color-link);
  color: var(--color-link);
  text-decoration: none;
  
  &:hover,
  &:focus {
    background-color: var(--color-link-background-hover);
    border-color: var(--color-link-background-hover);
    border-radius: var(--border-radius-s);
    color: var(--color-link-hover);

    code {
      background-color: var(--color-link-background-hover);
      border-color: var(--color-background);
    }
  }

  &:focus-visible {
    outline: 3px solid var(--color-focus);
    outline-offset: 3px;
  }
}

@supports not selector(:focus-visible) {
  a:focus {
    outline: 3px solid var(--color-focus);
    outline-offset: 3px;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-text-deemphasis);
  font-family: 'Poppins', sans-serif;
  font-weight: 500;

  &:target {
    scroll-margin-block: var(--spacing-l);
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-block-end: var(--spacing-xs);
  margin-block-start: var(--spacing-xl);
}

p {
  margin-block-start: 0;
  margin-block-end: var(--spacing-m);
}

h1,
h2,
h3 {
  line-height: 1.4;
}

h1,
.h1 {
  font-size: var(--text-xl);
}

h2,
.h2 {
  font-size: var(--text-l);
}

h3,
.h3 {
  font-size: var(--text-m);
}

h4,
.h4 {
  font-size: var(--text-s);
  font-weight: 700;
}

h5,
.h5 {
  font-size: var(--text-s);
  font-style: italic;
}

h6,
.h6 {
  font-size: var(--text-xs);
}

strong {
  color: var(--color-text-emphasis);
  font-weight: 700;
}

img {
  height: auto;
  max-width: 100%;
}

svg {
  fill: currentColor;
}

code {
  border: 1px solid var(--color-border-emphasis);
  background-color: var(--color-background-deemphasis);
  border-radius: var(--border-radius-s);
  padding-inline: var(--spacing-2xs);
  font-size: var(--text-xs);
}

pre {
  /* Use custom background colour */
  background-color: var(--color-background-emphasis) !important;
  border-radius: var(--border-radius-s);
  font-size: var(--text-xs);
  padding: var(--spacing-m) var(--spacing-m);
  overflow-x: auto;

  code {
    all: unset;
  }
}

blockquote {
  border-left: 4px solid var(--color-link-background-hover);
  padding-inline-start: var(--spacing-m);
}

figure {
  margin-block: var(--spacing-2xl);
  margin-inline: 0;

  figcaption {
    text-align: center;
  }
}

@media screen and (min-width: 768px) {
  figure {
    margin-inline: var(--spacing-l);
  }
}

